--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
     - uses: actions/upload-artifact@v4.6.0
       with:
         name: "${{ env.app-name }}-${{ matrix.node-version }}"
-        path: "${{ env.app-name }}-${{ matrix.node-version }}"
+        path: "${{ env.app-name }}"
