- update .github/workflows/build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - run: npx sv create ${{ env.app-name }}
+    - run: npx sv create ${{ env.app-name }} --template minimal --types ts --no-install
     
     - uses: actions/upload-artifact@v4.6.0
       with:
