--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
     
     - uses: actions/upload-artifact@v4.6.0
       with:
-        name: "${{ env.app-name }}-${{ matrix.node-version }}"
+        name: "${{ env.app-name }}-node-v${{ matrix.node-version }}"
         path: "${{ env.app-name }}"
